[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["ahnanne <54733637+ahnanne@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/ahnanne/fastfeedback"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"